# meowsort

./: .gitignore  README.md  pyproject.toml  test.py
meowsort/: __init__.py  algorithms.py  exceptions.py  sorter.py
meowsort.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
