[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meowsort"
version = "0.1.3"
description = "Lightweight Python sorting utility that automatically selects the best sorting algorithm."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name="Shaurya Pratap Singh" }
]

license = {file = "LICENSE"}

keywords = ["sorting", "algorithms", "python", "utilities"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ShauryaSingh1709/meowsort"
Repository = "https://github.com/ShauryaSingh1709/meowsort"
Issues = "https://github.com/ShauryaSingh1709/meowsort/issues"
